--- a/app.json
+++ b/app.json
@@ -31,6 +31,18 @@
       "eas": {
         "projectId": "4cddc790-5240-463c-a8af-82ad583a4161"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#ffffff",
+          "sounds": [
+            "./assets/icon.png"
+          ]
+        }
+      ]
+    ]
   }
 }
