--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "expo": "~54.0.30",
-    "expo-dev-client": "~6.0.20",
-    "expo-notifications": "^0.32.15",
+    "expo-av": "~16.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
     "react": "19.1.0",
